v0.8.0/_sources/how_to/work_with_microtvm/index.rst.txt
:orphan:



.. _sphx_glr_how_to_work_with_microtvm:

.. _tutorial-micro:

Work With microTVM
------------------
microTVM enables inference on bare-metal platforms, for example, those without
a traditional Operating System such as Linux, OS X, or Windows. These how-tos
demonstrate how to tune and deploy models with microTVM.



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial explains how to autotune a model using the C runtime.">

.. only:: html

 .. figure:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_autotune_thumb.png
     :alt: Autotuning with micro TVM

     :ref:`sphx_glr_how_to_work_with_microtvm_micro_autotune.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_autotune

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial explains how to launch microTVM Reference Virtual Machines. You can use these to ...">

.. only:: html

 .. figure:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_reference_vm_thumb.png
     :alt: microTVM Reference Virtual Machines

     :ref:`sphx_glr_how_to_work_with_microtvm_micro_reference_vm.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_reference_vm

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial is an introduction to working with microTVM and a TFLite model with Relay.">

.. only:: html

 .. figure:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_tflite_thumb.png
     :alt: microTVM with TFLite Models

     :ref:`sphx_glr_how_to_work_with_microtvm_micro_tflite.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_tflite
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
