v0.12.0/_sources/how_to/work_with_microtvm/index.rst.txt
:orphan:



.. _sphx_glr_how_to_work_with_microtvm:

.. _tutorial-micro:

Work With microTVM
------------------
microTVM enables inference on bare-metal platforms, for example, those without
a traditional Operating System such as Linux, OS X, or Windows. These how-tos
demonstrate how to tune and deploy models with microTVM.



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial is an introduction to working with microTVM and a TFLite model with Relay.">

.. only:: html

 .. figure:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_tflite_thumb.png
     :alt: 2. microTVM TFLite Tutorial

     :ref:`sphx_glr_how_to_work_with_microtvm_micro_tflite.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_tflite

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial is showcasing microTVM host-driven AoT compilation with a TFLite model. AoTExecut...">

.. only:: html

 .. figure:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_aot_thumb.png
     :alt: 3. microTVM Ahead-of-Time (AOT) Compilation

     :ref:`sphx_glr_how_to_work_with_microtvm_micro_aot.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_aot

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial is showcasing microTVM host-driven AoT compilation with a PyTorch model. This tut...">

.. only:: html

 .. figure:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_pytorch_thumb.png
     :alt: 4. microTVM PyTorch Tutorial

     :ref:`sphx_glr_how_to_work_with_microtvm_micro_pytorch.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_pytorch

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial shows how MobileNetV1 models can be trained to fit on embedded devices, and how t...">

.. only:: html

 .. figure:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_train_thumb.png
     :alt: 5. Training Vision Models for microTVM on Arduino

     :ref:`sphx_glr_how_to_work_with_microtvm_micro_train.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_train

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial explains how to autotune a model using the C runtime.">

.. only:: html

 .. figure:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_autotune_thumb.png
     :alt: 6. Model Tuning with microTVM

     :ref:`sphx_glr_how_to_work_with_microtvm_micro_autotune.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_autotune

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This section contains an example of how to use TVM to run a model on an Arm(R) Cortex(R)-M55 CP...">

.. only:: html

 .. figure:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_ethosu_thumb.png
     :alt: 7. Running TVM on bare metal Arm(R) Cortex(R)-M55 CPU and Ethos(TM)-U55 NPU with CMSIS-NN

     :ref:`sphx_glr_how_to_work_with_microtvm_micro_ethosu.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_ethosu

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial is showcasing building an MLPerfTiny submission using microTVM. This tutorial sho...">

.. only:: html

 .. figure:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_mlperftiny_thumb.png
     :alt: 8. Creating Your MLPerfTiny Submission with microTVM

     :ref:`sphx_glr_how_to_work_with_microtvm_micro_mlperftiny.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_mlperftiny

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial describes the steps required to integrate a model compiled with microTVM into a c...">

.. only:: html

 .. figure:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_custom_ide_thumb.png
     :alt: 9. Bring microTVM to your own development environment

     :ref:`sphx_glr_how_to_work_with_microtvm_micro_custom_ide.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_custom_ide
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
